pour modifier la couleur du grand titre

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body style="background-color:pink">
-   <h1 style=" padding-top : 20%; padding-bottom : 20%; text-align:center">  Location de voiture </h1>
+   <h1 style=" padding-top : 20%; padding-bottom : 20%; text-align:center; color:#FFFFFF">  Location de voiture </h1>
  </body>
 </html>
