--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-color:pink">
+<body style="background-color:green">
    <h1 style=" padding-top : 20%; padding-bottom : 20%; text-align:center; color:#FFFFFF">  Location de voiture </h1>
  </body>
 </html>
