--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<html>
-<body style="background-color:green">
-   <h1 style=" padding-top : 20%; padding-bottom : 20%; text-align:center; color:#FFFFFF">  Location de voiture </h1>
- </body>
+<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+
+<body style="background-color:grey">
+<h1 style="text-align:center; color:#FFFFFF"> cette création est pour toi mon homme au de l'amour que je te porte je te souhaire bon moi de l'amour ma flamme jumelle</h1>
+   <img src ="./img/img1.jfif" style=" padding-top : 20%; padding-bottom : 20%; margin-left:40%;margin-right:50%; color:#FFFFFF">  
+   
+</body>
 </html>
