--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body style="background-color:grey">
-<h1 style="text-align:center; color:#FFFFFF">cette création est pour toi mon homme au de l'amour que je</h1>
-<h1 style="text-align:center; color:#FFFFFF">te porte je te souhaire bon moi de l'amour ma flamme jumelle</h1>  
+<h1 style="text-align:center; color:#FFFFFF"></h1>
+<h1 style="text-align:center; color:#FFFFFF"></h1>  
    <img src ="./img/img1.jfif" style=" padding-top : 10%; padding-bottom : 20%; margin-left:40%;margin-right:50%; color:#FFFFFF">  
    
 </body>
